--- a/src/app/menus/menuitem/menuitem.component.scss
+++ b/src/app/menus/menuitem/menuitem.component.scss
@@ -24,12 +24,14 @@ span {
   @include media-up-to(lg) {
     padding: 10px 15px;
   }
+  font-size: 17px;
 
   @include media-up-to(md) {
-    padding: 10px 10px;
+    padding: 10px 8px;
+    font-size: 14px;
   }
 
-  font-size: 17px;
+
   color: $color-navy;
 }
 
